--- a/index.html
+++ b/index.html
@@ -4,9 +4,100 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>examenHTML5CSS3</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
+
+    <header>
+
+        <ul>
+            <li>
+                <a href="">Producto 1</a>
+            </li>
+            <li>
+                <a href="">Producto 2</a>
+            </li>
+            <li>
+                <a href="">Producto 3</a>
+            </li>
+            <li>
+                <a href="">Producto 4</a>
+            </li>
+            <li>
+                <a href="">Producto 4</a>
+            </li>
+            <li>
+                <a href="">Producto 5</a>
+            </li>
+            <li>
+                <a href="">Producto 6</a>
+            </li>
+            <li>
+                <a href="">Producto 7</a>
+            </li>
+            <li>
+                <a href="">Producto 1</a>
+            </li>
+            <li>
+                <a href="">Producto 2</a>
+            </li>
+            <li>
+                <a href="">Producto 3</a>
+            </li>
+            <li>
+                <a href="">Producto 4</a>
+            </li>
+            <li>
+                <a href="">Producto 4</a>
+            </li>
+            <li>
+                <a href="">Producto 5</a>
+            </li>
+            <li>
+                <a href="">Producto 6</a>
+            </li>
+            <li>
+                <a href="">Producto 7</a>
+            </li>
+            <li>
+                <a href="">Producto 1</a>
+            </li>
+            <li>
+                <a href="">Producto 2</a>
+            </li>
+            <li>
+                <a href="">Producto 3</a>
+            </li>
+            <li>
+                <a href="">Producto 4</a>
+            </li>
+            <li>
+                <a href="">Producto 4</a>
+            </li>
+            <li>
+                <a href="">Producto 5</a>
+            </li>
+            <li>
+                <a href="">Producto 6</a>
+            </li>
+            <li>
+                <a href="">Producto 7</a>
+            </li>
+            <li>
+                <a href="">Producto 7</a>
+            </li>
+        
+    </header>
+
+    <main>
+
+        <div class="products">
+            <div class="product"></div>
+            <div class="product"></div>
+            <div class="product"></div>
+            <div class="product"></div>
+        </div>
+    </main>
     
 </body>
 </html>
