--- a/index.html
+++ b/index.html
@@ -91,9 +91,22 @@
     </header>
 
     <div class="popUp">
+        <label for="check" class="checkbtn">
+            <svg xmlns="http://www.w3.org/2000/svg" width="60" height="60" viewBox="0 0 24 24" style="fill: #f5a512;transform: ;msFilter:;"><path d="M21 4H2v2h2.3l3.521 9.683A2.004 2.004 0 0 0 9.7 17H18v-2H9.7l-.728-2H18c.4 0 .762-.238.919-.606l3-7A.998.998 0 0 0 21 4z"></path><circle cx="10.5" cy="19.5" r="1.5"></circle><circle cx="16.5" cy="19.5" r="1.5"></circle></svg>
+        </label>
+        <input type="checkbox" id="check">
 
-        <svg xmlns="http://www.w3.org/2000/svg" width="60" height="60" viewBox="0 0 24 24" style="fill: #f5a512;transform: ;msFilter:;"><path d="M21 4H2v2h2.3l3.521 9.683A2.004 2.004 0 0 0 9.7 17H18v-2H9.7l-.728-2H18c.4 0 .762-.238.919-.606l3-7A.998.998 0 0 0 21 4z"></path><circle cx="10.5" cy="19.5" r="1.5"></circle><circle cx="16.5" cy="19.5" r="1.5"></circle></svg>
-    
+        <nav class="navegador">
+
+            <div class="producto__foto">
+
+            </div>
+            <h2>Nombre del producto</h2>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Porro reprehenderit odit vitae adipisci officia, non nihil, ad fuga sed inventore facilis fugit autem itaque amet obcaecati. Repellat ea ad laborum?
+            <p>$100.000</p>
+
+        </nav>
+
     </div>
 
     <main>
