feat: :construction: popUp - le puse la informacion y arreglé la interfaz

--- a/index.html
+++ b/index.html
@@ -98,12 +98,22 @@
 
         <nav class="navegador">
 
-            <div class="producto__foto">
+            <h2>Detalles</h2>
 
+            <div class="gallery__detalles">
+                <detalle>Aqui va la descripcion</detalle>
+                <detalle>Aqui va la descripcion</detalle>
+                <detalle>Aqui va la descripcion</detalle>
+                <detalle>Aqui va la descripcion</detalle>
+                <detalle>Aqui va la descripcion</detalle>
             </div>
-            <h2>Nombre del producto</h2>
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Porro reprehenderit odit vitae adipisci officia, non nihil, ad fuga sed inventore facilis fugit autem itaque amet obcaecati. Repellat ea ad laborum?
-            <p>$100.000</p>
+            <div class="total">
+                <p>Total</p>
+                <div class="precios">
+                    <p>$1.99.8</p>
+                    <button>pagar</button>
+                </div>
+            </div>
 
         </nav>
 
